test/sema/pointer-to-rvalue.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

int foo() { return 42; }

void main() {
    // CHECK: [[@LINE+1]]:17: error: cannot assign 'int' to 'int*'
    int* p = foo();
}
